# viridian-engine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateSolution.sh  LICENSE  README.md
Demo/: CMakeLists.txt  DemoMain.cpp
Demo/Demo/: DemoProgram.cpp  DemoProgram.hpp  Main.cpp  Program.cpp  Program.hpp
Graphics/: CMakeLists.txt
Graphics/Graphics/: GraphicsService.cpp  GraphicsService.hpp  Window.cpp  Window.hpp
Graphics/Graphics/Colors/: Color4f.hpp  Color4f.inl  Colors.hpp
Runtime/: CMakeLists.txt
Runtime/Runtime/: Program.cpp  Program.hpp  ServiceManager.hpp
scripts/: UpdateSubmodules.sh
source/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
src/core/: CeruleanEngine.cpp  CeruleanEngine.h  Engine.cpp  Engine.h  Main.cpp
src/graphics/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/rendering/: CeruleanRenderer.cpp  CeruleanRenderer.h
